--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -129,6 +129,11 @@ jobs:
           chmod +x build.sh
           ./build.sh
 
+      - name: Inspect WCP runtime contract
+        run: |
+          set -euxo pipefail
+          bash ci/validation/inspect-wcp-runtime-contract.sh "${WCP_OUTPUT_DIR}/${WCP_NAME}.wcp" --strict-bionic
+
       - name: Verify outputs
         run: |
           set -euxo pipefail
