--- a/.github/workflows/ci-proton-ge10-wcp.yml
+++ b/.github/workflows/ci-proton-ge10-wcp.yml
@@ -125,6 +125,11 @@ jobs:
           set -euxo pipefail
           bash ci/proton-ge10/ci-build-proton-ge10-wcp.sh
 
+      - name: Inspect WCP runtime contract
+        run: |
+          set -euxo pipefail
+          bash ci/validation/inspect-wcp-runtime-contract.sh "${WCP_OUTPUT_DIR}/${WCP_NAME}.wcp" --strict-bionic
+
       - name: Upload WCP artifact
         if: success()
         uses: actions/upload-artifact@v4
