--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -132,7 +132,9 @@ jobs:
       - name: Inspect WCP runtime contract
         run: |
           set -euxo pipefail
-          bash ci/validation/inspect-wcp-runtime-contract.sh "${WCP_OUTPUT_DIR}/${WCP_NAME}.wcp" --strict-bionic
+          mkdir -p "${WCP_OUTPUT_DIR}/logs"
+          bash ci/validation/inspect-wcp-runtime-contract.sh "${WCP_OUTPUT_DIR}/${WCP_NAME}.wcp" --strict-bionic \
+            | tee "${WCP_OUTPUT_DIR}/logs/runtime-contract-inspection.txt"
 
       - name: Verify outputs
         run: |
