--- a/.github/workflows/ci-proton-ge10-wcp.yml
+++ b/.github/workflows/ci-proton-ge10-wcp.yml
@@ -52,7 +52,8 @@ env:
   WCP_TARGET_RUNTIME: winlator-bionic
   WCP_PRUNE_EXTERNAL_COMPONENTS: "1"
   WCP_ENABLE_SDL2_RUNTIME: "1"
-  WCP_WINE_BUILD_JOBS: "2"
+  WCP_WINE_BUILD_JOBS: "1"
+  WCP_BUILD_LOG_FILE: ${{ github.workspace }}/out/proton-ge10/logs/wine-build.log
   WCP_RUNTIME_CLASS_TARGET: bionic-native
   WCP_RUNTIME_CLASS_ENFORCE: "1"
   WCP_GLIBC_SOURCE_MODE: host
