ci: quiet build logs with heartbeat for wcp pipelines

--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -52,6 +52,8 @@ env:
   WCP_WINE_BUILD_JOBS: "1"
   WCP_FEX_BUILD_JOBS: "2"
   WCP_BUILD_LOG_FILE: ${{ github.workspace }}/out/wine/logs/wine-build.log
+  WCP_BUILD_LOG_STDOUT_MODE: quiet
+  WCP_BUILD_HEARTBEAT_SEC: "60"
   WCP_RUNTIME_CLASS_TARGET: bionic-native
   WCP_RUNTIME_CLASS_ENFORCE: "1"
   WCP_PRUNE_EXTERNAL_COMPONENTS: "1"
