--- a/.github/workflows/ci-protonwine10-wcp.yml
+++ b/.github/workflows/ci-protonwine10-wcp.yml
@@ -57,6 +57,8 @@ env:
   WCP_ENABLE_SDL2_RUNTIME: "1"
   WCP_WINE_BUILD_JOBS: "1"
   WCP_BUILD_LOG_FILE: ${{ github.workspace }}/out/protonwine10/logs/wine-build.log
+  WCP_BUILD_LOG_STDOUT_MODE: quiet
+  WCP_BUILD_HEARTBEAT_SEC: "60"
   WCP_RUNTIME_CLASS_TARGET: bionic-native
   WCP_RUNTIME_CLASS_ENFORCE: "1"
   WCP_GLIBC_SOURCE_MODE: host
