Align wine/proton-ge with GameNative android patches

--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -71,6 +71,8 @@ env:
   WCP_BIONIC_SOURCE_MAP_FORCE: "0"
   WCP_BIONIC_SOURCE_MAP_REQUIRED: "0"
   WCP_BIONIC_DONOR_PREFLIGHT: "0"
+  WINE_TOOLS_CONFIGURE_EXTRA_ARGS: --without-x --without-gstreamer --without-vulkan --without-wayland
+  WINE_CONFIGURE_PROFILE: proton-android-minimal
   PREFIX_PACK_URL: https://raw.githubusercontent.com/GameNative/bionic-prefix-files/main/prefixPack-arm64ec.txz
 
 jobs:
