--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -6,7 +6,9 @@ on:
     paths:
       - "build.sh"
       - "ci/ci-build.sh"
+      - "ci/gamenative/**"
       - "ci/lib/**"
+      - "ci/validation/**"
       - "ci/runtime-bundle/**"
       - "ci/runtime-sources/**"
       - ".github/workflows/ci-arm64ec-wine.yml"
@@ -71,6 +73,10 @@ env:
   WCP_BIONIC_SOURCE_MAP_FORCE: "0"
   WCP_BIONIC_SOURCE_MAP_REQUIRED: "0"
   WCP_BIONIC_DONOR_PREFLIGHT: "0"
+  WCP_GN_PATCHSET_ENABLE: "1"
+  WCP_GN_PATCHSET_REF: 28c3a06ba773f6d29b9f3ed23b9297f94af4771c
+  WCP_GN_PATCHSET_STRICT: "1"
+  WCP_GN_PATCHSET_REPORT: ${{ github.workspace }}/out/wine/logs/gamenative-patchset-wine.tsv
   WINE_TOOLS_CONFIGURE_EXTRA_ARGS: --without-x --without-gstreamer --without-vulkan --without-wayland
   WINE_CONFIGURE_PROFILE: proton-android-minimal
   PREFIX_PACK_URL: https://raw.githubusercontent.com/GameNative/bionic-prefix-files/main/prefixPack-arm64ec.txz
