--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -76,6 +76,7 @@ env:
   WCP_GN_PATCHSET_ENABLE: "1"
   WCP_GN_PATCHSET_REF: 28c3a06ba773f6d29b9f3ed23b9297f94af4771c
   WCP_GN_PATCHSET_STRICT: "1"
+  WCP_GN_PATCHSET_VERIFY_AUTOFIX: "1"
   WCP_GN_PATCHSET_REPORT: ${{ github.workspace }}/out/wine/logs/gamenative-patchset-wine.tsv
   WINE_TOOLS_CONFIGURE_EXTRA_ARGS: --without-x --without-gstreamer --without-vulkan --without-wayland
   WINE_CONFIGURE_PROFILE: proton-android-minimal
