--- a/.github/workflows/ci-protonwine10-wcp.yml
+++ b/.github/workflows/ci-protonwine10-wcp.yml
@@ -5,7 +5,9 @@ on:
     branches: ["main"]
     paths:
       - "ci/protonwine10/**"
+      - "ci/gamenative/**"
       - "ci/lib/**"
+      - "ci/validation/**"
       - "ci/runtime-bundle/**"
       - "ci/runtime-sources/**"
       - ".github/workflows/ci-protonwine10-wcp.yml"
@@ -75,6 +77,11 @@ env:
   WCP_BIONIC_SOURCE_MAP_FORCE: "0"
   WCP_BIONIC_SOURCE_MAP_REQUIRED: "0"
   WCP_BIONIC_DONOR_PREFLIGHT: "0"
+  WCP_GN_PATCHSET_ENABLE: "1"
+  WCP_GN_PATCHSET_REF: 28c3a06ba773f6d29b9f3ed23b9297f94af4771c
+  WCP_GN_PATCHSET_STRICT: "1"
+  WCP_GN_PATCHSET_VERIFY_AUTOFIX: "1"
+  WCP_GN_PATCHSET_REPORT: ${{ github.workspace }}/out/protonwine10/logs/gamenative-patchset-protonwine.tsv
   PREFIX_PACK_URL: https://raw.githubusercontent.com/GameNative/bionic-prefix-files/main/prefixPack-arm64ec.txz
 
 jobs:
@@ -105,6 +112,7 @@ jobs:
             libxcursor-dev libxinerama-dev libxcomposite-dev libxcb1-dev \
             libxkbcommon-dev \
             libpulse-dev libudev-dev \
+            libgnutls28-dev \
             libgstreamer-plugins-base1.0-dev \
             libsdl2-dev \
             libvulkan-dev
