ci: fix make rc reporting and add xfixes dev deps

--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -112,6 +112,7 @@ jobs:
             libgstreamer-plugins-base1.0-dev \
             libgif-dev \
             libgnutls28-dev \
+            libxfixes-dev \
             libsmbclient-dev \
             libsdl2-dev
           mkdir -p "${WCP_OUTPUT_DIR}" "${TOOLCHAIN_DIR}"
