--- a/.github/workflows/ci-protonwine10-wcp.yml
+++ b/.github/workflows/ci-protonwine10-wcp.yml
@@ -108,7 +108,7 @@ jobs:
             libunwind-dev libxml2-dev zlib1g-dev \
             libfreetype-dev libjpeg-dev libpng-dev libtiff-dev \
             libx11-dev libxext-dev libxrandr-dev libxi-dev \
-            libxcursor-dev libxinerama-dev libxcomposite-dev libxcb1-dev \
+            libxcursor-dev libxinerama-dev libxcomposite-dev libxfixes-dev libxcb1-dev \
             libxkbcommon-dev \
             libpulse-dev libudev-dev \
             libgnutls28-dev \
