--- a/.github/workflows/ci-proton-ge10-wcp.yml
+++ b/.github/workflows/ci-proton-ge10-wcp.yml
@@ -110,6 +110,7 @@ jobs:
             libxcursor-dev libxinerama-dev libxcomposite-dev libxfixes-dev libxcb1-dev \
             libxkbcommon-dev \
             libpulse-dev libudev-dev \
+            libgnutls28-dev \
             libgstreamer-plugins-base1.0-dev \
             libsdl2-dev \
             libvulkan-dev
