ci: fix wine/proton/ge pipeline regressions

--- a/.github/workflows/ci-proton-ge10-wcp.yml
+++ b/.github/workflows/ci-proton-ge10-wcp.yml
@@ -105,6 +105,7 @@ jobs:
             build-essential autoconf automake libtool pkg-config bison flex gettext gawk texinfo \
             cmake ninja-build \
             libunwind-dev libxml2-dev zlib1g-dev \
+            libfontconfig1-dev \
             libfreetype-dev libjpeg-dev libpng-dev libtiff-dev \
             libx11-dev libxext-dev libxrandr-dev libxi-dev \
             libxcursor-dev libxinerama-dev libxcomposite-dev libxfixes-dev libxcb1-dev \
