--- a/.github/workflows/ci-protonwine10-wcp.yml
+++ b/.github/workflows/ci-protonwine10-wcp.yml
@@ -75,7 +75,7 @@ env:
   WCP_MAINLINE_BIONIC_ONLY: "1"
   WCP_MAINLINE_FEX_EXTERNAL_ONLY: "1"
   WCP_ALLOW_GLIBC_EXPERIMENTAL: "0"
-  WCP_WRAPPER_POLICY_VERSION: urc-v1
+  WCP_WRAPPER_POLICY_VERSION: runtime-v1
   WCP_POLICY_SOURCE: aesolator-mainline
   WCP_FALLBACK_SCOPE: bionic-internal-only
   WCP_BIONIC_SOURCE_MAP_FILE: ${{ github.workspace }}/ci/runtime-sources/bionic-source-map.json
@@ -89,6 +89,7 @@ env:
   WCP_GN_PATCHSET_STRICT: "1"
   WCP_GN_PATCHSET_VERIFY_AUTOFIX: "1"
   WCP_GN_PATCHSET_REPORT: ${{ github.workspace }}/out/protonwine10/logs/gamenative-patchset-protonwine.tsv
+  WCP_LEGACY_PATCH_BASE_ENABLE: "0"
   PREFIX_PACK_URL: https://raw.githubusercontent.com/GameNative/bionic-prefix-files/main/prefixPack-arm64ec.txz
 
 jobs:
@@ -99,11 +100,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
-      - name: Validate URC mainline policy
-        run: |
-          set -euxo pipefail
-          bash ci/validation/check-urc-mainline-policy.sh
 
       - name: Install build deps
         run: |
